Add hearts div to love screen
Added a hearts div to the final screen.

--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
   <!-- PANTALLA FINAL -->
   <div class="game" id="love-screen" style="display: none;">
     <h1>💖💖💖</h1>
-    <p>Ya sabia que ibas a decir que si, te quiero mucho mucho 💖 </p>
+    <p>Ya sabia que ibas a decir que si, te quiero mucho mucho ❤️ </p>
+    <div class="hearts"></div>
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
